--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "sass": "^1.69.7",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   },
   "dependencies": {
-    "reset-css": "^5.0.2",
-    "sass": "^1.69.7"
+    "reset-css": "^5.0.2"
   }
 }
